--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^24.1.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "jsdom": "^26.1.0",
     "typescript": "^5.8.3",
     "vite": "^7.0.5",
