--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest run --environment jsdom"
+    "test": "vitest run --coverage"
   },
   "type": "module",
   "devDependencies": {
