--- a/spacesim/tsconfig.json
+++ b/spacesim/tsconfig.json
@@ -13,5 +13,6 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src", "vite.config.ts", "vitest.config.ts"]
 }
