feat: add performance tests
feature/performance-tests

--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -7,7 +7,8 @@
     "build": "npm test && vite build",
     "preview": "vite preview",
     "test": "vitest run --coverage",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "test:perf": "vitest bench --run --config vitest.performance.config.ts"
   },
   "type": "module",
   "devDependencies": {
