--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:commit": "commitlint --edit"
+    "lint:commit": "commitlint --edit",
+    "docs": "node scripts/generate-docs.js"
   },
   "keywords": [],
   "author": "",
