--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -25,6 +25,7 @@
     "mitt": "^3.0.1",
     "planck-js": "^0.3.0",
     "preact": "^10.26.9",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "three": "^0.178.0"
   }
 }
