--- a/docs/1/manifest.json
+++ b/docs/1/manifest.json
@@ -12,6 +12,7 @@
     "feature/drag-spawn/README.md",
     "feature/orbit-overlay/README.md",
     "feature/pause-reset/README.md",
+    "feature/performance-tests/README.md",
     "feature/select-highlight/README.md",
     "feature/speed-control/README.md",
     "feature/zoom-pan/README.md",
