--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -19,7 +19,8 @@
     "playwright": "^1.54.1",
     "typescript": "^5.8.3",
     "vite": "^7.0.5",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vite-plugin-static-copy": "^3.1.1"
   },
   "dependencies": {
     "@preact/preset-vite": "^2.10.2",
