--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -19,15 +19,16 @@
     "playwright": "^1.54.1",
     "typescript": "^5.8.3",
     "vite": "^7.0.5",
-    "vitest": "^3.2.4",
-    "vite-plugin-static-copy": "^3.1.1"
+    "vite-plugin-static-copy": "^3.1.1",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@preact/preset-vite": "^2.10.2",
+    "marked": "^9.1.2",
     "mitt": "^3.0.1",
     "planck-js": "^0.3.0",
     "preact": "^10.26.9",
     "rxjs": "^7.8.1",
-    "marked": "^9.1.2"
+    "three": "^0.164.0"
   }
 }
