chore: regenerate v1 docs

--- a/docs/1/manifest.json
+++ b/docs/1/manifest.json
@@ -15,6 +15,7 @@
     "feature/performance-tests/README.md",
     "feature/select-highlight/README.md",
     "feature/speed-control/README.md",
+    "feature/three-renderer/README.md",
     "feature/zoom-pan/README.md",
     "githooks/README.md",
     "practices/BUGFIX.md",
