fix: correct pointer mapping
bugfix/click-coord-offset

--- a/docs/1/manifest.json
+++ b/docs/1/manifest.json
@@ -4,7 +4,9 @@
     "README.md",
     "bugfix/README.md",
     "bugfix/body-editor-refresh/README.md",
+    "bugfix/click-coord-offset/README.md",
     "bugfix/overlay-color/README.md",
+    "bugfix/three-renderer-fixes/README.md",
     "example/AGENTS.md",
     "example/README.md",
     "feature/README.md",
