fix: move docs into spacesim

--- a/spacesim/docs/1/manifest.json
+++ b/spacesim/docs/1/manifest.json
@@ -5,6 +5,7 @@
     "bugfix/README.md",
     "bugfix/body-editor-refresh/README.md",
     "bugfix/overlay-color/README.md",
+    "bugfix/three-renderer-fixes/README.md",
     "example/AGENTS.md",
     "example/README.md",
     "feature/README.md",
