--- a/spacesim/docs/1/manifest.json
+++ b/spacesim/docs/1/manifest.json
@@ -4,6 +4,7 @@
     "README.md",
     "bugfix/README.md",
     "bugfix/body-editor-refresh/README.md",
+    "bugfix/click-coord-offset/README.md",
     "bugfix/overlay-color/README.md",
     "bugfix/three-renderer-fixes/README.md",
     "example/AGENTS.md",
