fix: regenerate docs manifest
bugfix/docs-manifest-conflict

--- a/spacesim/docs/1/manifest.json
+++ b/spacesim/docs/1/manifest.json
@@ -5,10 +5,8 @@
     "bugfix/README.md",
     "bugfix/body-editor-refresh/README.md",
     "bugfix/click-coord-offset/README.md",
-<<<<<<< HEAD:spacesim/docs/1/manifest.json
-=======
+    "bugfix/docs-manifest-conflict/README.md",
     "bugfix/label-position-offset/README.md",
->>>>>>> main:docs/1/manifest.json
     "bugfix/overlay-color/README.md",
     "bugfix/three-renderer-fixes/README.md",
     "example/AGENTS.md",
