--- a/spacesim/docs/1/manifest.json
+++ b/spacesim/docs/1/manifest.json
@@ -16,6 +16,7 @@
     "feature/orbit-overlay/README.md",
     "feature/pause-reset/README.md",
     "feature/performance-tests/README.md",
+    "feature/scenario-view/README.md",
     "feature/select-highlight/README.md",
     "feature/speed-control/README.md",
     "feature/three-renderer/README.md",
