--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  root:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -14,19 +14,6 @@ jobs:
         with:
           node-version: 20
       - run: npm install
-      - run: node test/new-record.test.js && node test/generate-docs.test.js
-
-  spacesim:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: spacesim
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 20
-      - run: npm install
+      - run: npm --prefix spacesim install
+      - run: npx --prefix spacesim playwright install --with-deps
       - run: npm test
-      - run: npx playwright install --with-deps
-      - run: npm run test:e2e
