chore: ensure playwright browsers for e2e

--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -7,6 +7,7 @@
     "build": "npm test && vite build",
     "preview": "vite preview",
     "test": "vitest run --coverage",
+    "pretest:e2e": "playwright install --with-deps",
     "test:e2e": "playwright test",
     "test:perf": "vitest bench --run --config vitest.performance.config.ts --outputJson performance/latest.json && node performance/compare.js"
   },
