--- a/spacesim/docs/1/manifest.json
+++ b/spacesim/docs/1/manifest.json
@@ -16,10 +16,12 @@
     "feature/drag-spawn/README.md",
     "feature/orbit-overlay/README.md",
     "feature/pause-reset/README.md",
+    "feature/perf-history/README.md",
     "feature/performance-tests/README.md",
     "feature/scenario-view/README.md",
     "feature/select-highlight/README.md",
     "feature/speed-control/README.md",
+    "feature/sun-default-spawn/README.md",
     "feature/three-renderer/README.md",
     "feature/zoom-pan/README.md",
     "githooks/README.md",
