--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -24,10 +24,10 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@dimforge/rapier2d-compat": "^0.17.3",
     "@preact/preset-vite": "^2.10.2",
     "marked": "^9.1.2",
     "mitt": "^3.0.1",
-    "planck-js": "^0.3.0",
     "preact": "^10.26.9",
     "rxjs": "^7.8.1",
     "three": "^0.164.0"
