--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1"
+  },
+  "dependencies": {
+    "@dimforge/rapier2d": "^0.18.0-beta.0"
   }
 }
