--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -24,7 +24,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@dimforge/rapier2d-compat": "^0.17.3",
+    "planck-js": "^0.3.0",
     "@preact/preset-vite": "^2.10.2",
     "marked": "^9.1.2",
     "mitt": "^3.0.1",
