feat(spacesim): add configurable preferences

--- a/docs/1/manifest.json
+++ b/docs/1/manifest.json
@@ -9,12 +9,14 @@
     "example/README.md",
     "feature/README.md",
     "feature/body-editor/README.md",
+    "feature/config-view/README.md",
     "feature/drag-spawn/README.md",
     "feature/orbit-overlay/README.md",
     "feature/pause-reset/README.md",
     "feature/performance-tests/README.md",
     "feature/select-highlight/README.md",
     "feature/speed-control/README.md",
+    "feature/three-renderer/README.md",
     "feature/zoom-pan/README.md",
     "githooks/README.md",
     "practices/BUGFIX.md",
