feat: migrate simulation to 3d

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "@commitlint/config-conventional": "^19.8.1"
   },
   "dependencies": {
-    "@dimforge/rapier2d": "^0.18.0-beta.0"
+    "@dimforge/rapier3d": "^0.11.2"
   }
 }
