--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,4 @@ jobs:
       - run: npm install
       - run: npm --prefix spacesim install
       - run: npx --prefix spacesim playwright install --with-deps
-      - run: npm test
+      - run: NODE_OPTIONS="--max-old-space-size=4096" npm test
