--- a/spacesim/package.json
+++ b/spacesim/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "npm test && vite build",
     "preview": "vite preview",
-    "test": "vitest run --coverage",
+    "test": "NODE_OPTIONS=--max_old_space_size=4096 vitest run --coverage",
     "pretest:e2e": "playwright install --with-deps",
     "test:e2e": "playwright test",
     "test:perf": "vitest bench --run --config vitest.performance.config.ts --outputJson performance/latest.json && node performance/compare.js"
